# Demo-Django-Project

./: Dockerfile  docker-compose.yml  pyproject.toml  run.sh
core/: settings.py
